--- a/MiniDropbox.Web/Views/Account/LogIn.cshtml
+++ b/MiniDropbox.Web/Views/Account/LogIn.cshtml
@@ -20,6 +20,6 @@
           </label>@*
     @Html.ActionLink("Sign In","LogIn","Account",new {@class="btn btn-large btn-primary"});
         *@<button class="btn btn-large btn-primary" type="submit">Sign in</button>
-          <button class="btn btn-large btn-primary" type="submit">Register</button>
+    @Html.ActionLink("Registrarse", "Register", "Account", new { @class = "btn btn-large btn-primary" });
 }
 
