--- a/MiniDropbox.Web/Views/shared/_BootstrapLayout.narrow.cshtml
+++ b/MiniDropbox.Web/Views/shared/_BootstrapLayout.narrow.cshtml
@@ -63,7 +63,7 @@
             <ul class="nav nav-pills pull-right">
                 @Html.Navigation()
             </ul>
-            <h3 class="muted">MvcApplication1</h3>
+            <h3 class="muted">Mini Dropbox</h3>
         </div>
 
         @Html.Partial("_alerts")
