--- a/MiniDropbox.Web/Views/Account/ForgotPassword.cshtml
+++ b/MiniDropbox.Web/Views/Account/ForgotPassword.cshtml
@@ -13,7 +13,7 @@
 
         <div>
             <legend>Introduzca su dirección de correo electrónico y haga clic en "Enviar".
-                En pocos minutos usted recibirá su nueva contraseña con la que podrá acceder de nuevo<small></small></legend>
+                En pocos minutos usted recibirá un link para el cambio de contraseña<small></small></legend>
         </div>
         @foreach (var property in Model.VisibleProperties())
         {
@@ -32,5 +32,8 @@
     </fieldset>
     <div>
         <legend>Back to login form? @Html.ActionLink("Click here","LogIn", null, new { @class = "btn-link" })</legend>
+    </div>
+    <div>
+        <a>@ViewData["ErrorForgot"]</a>
     </div>
 }
