--- a/MiniDropbox.Web/Views/Disk/ListAllContent.cshtml
+++ b/MiniDropbox.Web/Views/Disk/ListAllContent.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewBag.Title = "MyContent";
-    Layout = "~/Views/shared/_BootstrapLayout.basic.cshtml";
+    Layout = "~/Views/shared/_BootstrapLayout.narrow.cshtml";
 }
 
 <h4>Mis Archivos <small></small></h4>
