--- a/MiniDropbox.Web/Views/shared/Index.cshtml
+++ b/MiniDropbox.Web/Views/shared/Index.cshtml
@@ -1,5 +1,5 @@
 @using BootstrapSupport
-@model System.Collections.IEnumerable   
+@model MiniDropbox.Web.Models.PaquetesPremiumModel   
     <h4>@Model.GetLabel() <small>Listing</small></h4>
 <table class="table table-striped">
     <caption></caption>
