--- a/MiniDropbox.Web/Views/ListAccount/BloquearCuenta.cshtml
+++ b/MiniDropbox.Web/Views/ListAccount/BloquearCuenta.cshtml
@@ -1,7 +1,6 @@
-﻿
-@using BootstrapSupport
+﻿@using BootstrapSupport
 @model MiniDropbox.Web.Models.ListAccountModel
-@using (@Html.BeginForm("Edit", "ListAccount", FormMethod.Post, new { @class = "form-signin" }))
+@using (@Html.BeginForm("BloquearCuenta", "ListAccount", FormMethod.Post, new { @class = "form-signin" }))
 {
     @Html.ValidationSummary(true)
     <fieldset class="form-horizontal">
@@ -17,7 +16,7 @@
             }
         }
 		<div class="form-actions">
-            <button type="submit" class="btn btn-primary">Save</button>
+            <button type="submit" class="btn btn-primary">Bloquear</button>
             @Html.ActionLink("Cancel", "Index", null, new { @class = "btn " })
           </div>
     </fieldset>
