--- a/MiniDropbox.Web/Views/PaquetesPremium/Paquetes.cshtml
+++ b/MiniDropbox.Web/Views/PaquetesPremium/Paquetes.cshtml
@@ -1,5 +1,5 @@
 ﻿@using BootstrapSupport
-@model System.Collections.Generic.List<MiniDropbox.Domain.Account>
+@model System.Collections.Generic.List<MiniDropbox.Domain.PaquetesPremium>
 
 
 @{
@@ -14,12 +14,11 @@
         <tr>
             @foreach (var property in Model[0].VisibleProperties())
             {
-                if (property.GetLabel() != "Email" && property.GetLabel() != "Id" && property.GetLabel() != "Files" && property.GetLabel() != "TranUrl" && property.GetLabel() != "IsArchived" && property.GetLabel() != "Password")
-                {
+                
                     <th>
                         @property.GetLabel().ToSeparatedWords()
                     </th>
-                }
+                
             }
             <th></th>
         </tr>
@@ -32,12 +31,11 @@
         <tr>
             @foreach (var property in model.VisibleProperties())
             {
-                if (property.Name != "Email" && property.Name != "Id" && property.Name != "Files" && property.Name != "TranUrl" && property.Name != "IsArchived" && property.Name != "Password")
-                {
+                
                     <td>
                         @Html.Display(index + "." + property.Name)
                     </td>
-                }
+                
             }
             <td>
                 <div class="btn-group">
@@ -49,8 +47,8 @@
                         @{
                             @Html.TryPartial("_actions", model)                            
                             var routevalues = model.GetIdValue();  
-                            <li>@Html.ActionLink("Cambiar Espacio Asignado", "Edit", routevalues)</li>
-                            <li>@Html.ActionLink("Bloquear cuenta", "BloquearCuenta", routevalues)</li>
+                            <li>@Html.ActionLink("Edit", "Edit", routevalues)</li>
+                            <li>@Html.ActionLink("Desactivar Paquete", "DesactivarPaquete", routevalues)</li>
                             <li class="divider"></li>
                                
                         }
@@ -64,5 +62,5 @@
 
 </table>
 <p>
-    @Html.ActionLink("Create New", "Create", null, new {@class = "btn"})
+    @Html.ActionLink("Create New", "CreatePaquete", null, new {@class = "btn"})
 </p>
