--- a/MiniDropbox.Web/Views/Disk/ListAllContent.cshtml
+++ b/MiniDropbox.Web/Views/Disk/ListAllContent.cshtml
@@ -10,18 +10,20 @@
 <table class="table table-striped">
     <caption></caption>
     <thead>
+        <tr><th><th><th></th><th></th><th>@Html.ActionLink("Buscar Archivos", "Buscar", "Disk", new { @class = "btn btn-mini btn-link" })</th></tr>
         <tr>
-              @if (Model.Count > 0)
-              {
-                  foreach (var property in Model[0].VisibleProperties())
-                   {
-                       <th>
-                           @property.GetLabel().ToSeparatedWords()
-                       </th>
-                   }
-              }
+            @if (Model.Count > 0)
+            {
+                foreach (var property in Model[0].VisibleProperties())
+                {
+                    <th>
+                        @property.GetLabel().ToSeparatedWords()
+                    </th>
+                }
+            }
             <th>@Html.ActionLink("Cargar", "SubirArchivo", "Disk", new { @class = "btn btn-mini btn-success" })
-                @Html.ActionLink("N.Fold", "NuevoDirectorio", "Disk", new { @class = "btn btn-mini btn-success" })</th>   
+                @Html.ActionLink("N.Fold", "NuevoDirectorio", "Disk", new { @class = "btn btn-mini btn-success" })
+            </th>   
             <th></th>
         </tr>
     </thead>
