--- a/MiniDropbox.Web/Views/Account/LogIn.cshtml
+++ b/MiniDropbox.Web/Views/Account/LogIn.cshtml
@@ -21,7 +21,7 @@
           </label>@*
     @Html.ActionLink("Sign In","LogIn","Account",new {@class="btn btn-large btn-primary"});
         *@<button class="btn btn-large btn-primary" type="submit">Login</button>
-    @Html.ActionLink("Sign in", "Register", "Account", new { @class = "btn btn-large btn-primary" });
+    @Html.ActionLink("Sign up", "Register", "Account", new { @class = "btn btn-large btn-primary" });
     
     <b></b>
     <h1>
